<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginEnd="64dp"

        android:background="@drawable/emailsrc"
        android:hint="@string/email"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:inputType="number"
        android:layout_height="64dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="64dp"
        android:hint="@string/password"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:background="@drawable/passwordsolid"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="64dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="64dp"
        android:text="@string/login"
        android:textSize="28sp"
        android:padding="4dp"
        android:textStyle="bold"
        android:textColor="#02C0F4"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:background="@drawable/password"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.35"
        android:textStyle="bold"
        android:textSize="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="150dp"
        android:textAlignment="center"
        android:layout_height="46dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:text="Register"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@drawable/register"
        android:padding="10dp"
        android:textColor="#02C0F4"/>






    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/cube"
        app:layout_constraintEnd_toStartOf="parent"/>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        android:background="@drawable/cube1"/>

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        android:background="@drawable/cube2"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/cube3"
        android:contentDescription="@string/todo" />



</androidx.constraintlayout.widget.ConstraintLayout>